employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-producer-deployment
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - name: employee-producer
        image: docker.io/vivekjothi/employee-producer
        ports:
        - containerPort: 8080
