employee-service.yml
kind: Service
apiVersion: v1
metadata:
  name: employee-producer-service
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
